# libjalali

./: ChangeLog  Makefile.am  README.md  autogen-clean.sh  autogen.sh  config.h  configure.ac  jalali.info  jalali.pc  jalali.pc.in  jalali.spec  jalali.spec.in
examples/: Makefile  main_test  main_test.c
include/: jalali.h
src/: Makefile.am  jalali.c
